--- a/MVCExtentions/MVCExtentions/MVCExtentions.csproj
+++ b/MVCExtentions/MVCExtentions/MVCExtentions.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Extentions\CSVResult.cs" />
     <Compile Include="Infrastructure\Extentions\XMLResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
